package musichub_server.business;

import java.util.*;
import musichub_server.util.*;
import org.w3c.dom.*;

/**
 * Class to compare two albums regarding their date
 */
class SortByDate implements Comparator<Album> {
	public int compare(Album a1, Album a2) {
			return a1.getDate().compareTo(a2.getDate());
	} 
}

/**
 * Class to compare two songs regarding their genre
 */
class SortByGenre implements Comparator<Song> {
	public int compare(Song s1, Song s2) {
			return s1.getGenre().compareTo(s2.getGenre());
	} 
}

/**
 * Class to compare two audio element regarding their author
 */
class SortByAuthor implements Comparator<AudioElement> {
	public int compare(AudioElement e1, AudioElement e2) {
			return e1.getArtist().compareTo(e2.getArtist());
	} 
}
	
public class MusicHub {
	private List<Album> albums;
	private List<PlayList> playlists;
	private List<AudioElement> elements;
	
	public static final String DIR = System.getProperty("user.dir");
	public static final String ALBUMS_FILE_PATH = DIR + "\\files\\xml\\albums.xml";
	public static final String PLAYLISTS_FILE_PATH = DIR + "\\files\\xml\\playlists.xml";
	public static final String ELEMENTS_FILE_PATH = DIR + "\\files\\xml\\elements.xml";
	
	private XMLHandler xmlHandler = new XMLHandler();

	/**
	 * Constructor
	 */
	public MusicHub () {
		albums = new LinkedList<Album>();
		playlists = new LinkedList<PlayList>();
		elements = new LinkedList<AudioElement>();
		this.loadElements();
		this.loadAlbums();
		this.loadPlaylists();
	}

	/**
	 * Adds an AudioElement
	 *
	 * @param element
	 */
	public void addElement(AudioElement element) {
		elements.add(element);
	}

	/**
	 * Adds an album
	 *
	 * @param album
	 */
	public void addAlbum(Album album) {
		albums.add(album);
	}

	/**
	 * Adds a playlist
	 *
	 * @param playlist
	 */
	public void addPlaylist(PlayList playlist) {
		playlists.add(playlist);
	}

	/**
	 * Delete a playlist
	 *
	 * @param playListTitle
	 * @throws NoPlayListFoundException
	 */
	public void deletePlayList(String playListTitle) throws NoPlayListFoundException {
		PlayList thePlayList = null;
		boolean result = false;
		for (PlayList pl : playlists) {
			if (pl.getTitle().toLowerCase().equals(playListTitle.toLowerCase())) {
				thePlayList = pl;
				break;
			}
		}
		
		if (thePlayList != null)  		
			result = playlists.remove(thePlayList); 
		if (!result) throw new NoPlayListFoundException("Playlist " + playListTitle + " not found!");
	}
	
	public Iterator<Album> albums() { 
		return albums.listIterator();
	}
	
	public Iterator<PlayList> playlists() { 
		return playlists.listIterator();
	}
	
	public Iterator<AudioElement> elements() { 
		return elements.listIterator();
	}

	/**
	 * Returns all the albums titles sorted by date
	 *
	 * @return
	 */
	public String getAlbumsTitlesSortedByDate() {
		StringBuffer titleList = new StringBuffer();
		Collections.sort(albums, new SortByDate());
		for (Album al : albums)
			titleList.append(al.getTitle()+ "\n");
		return titleList.toString();
	}

	/**
	 * Returns all the audiobooks titles sorted by author
	 *
	 * @return
	 */
	public String getAudiobooksTitlesSortedByAuthor() {
		StringBuffer titleList = new StringBuffer();
		List<AudioElement> audioBookList = new ArrayList<AudioElement>();
		for (AudioElement ae : elements)
				if (ae instanceof AudioBook)
					audioBookList.add(ae);
		Collections.sort(audioBookList, new SortByAuthor());
		for (AudioElement ab : audioBookList)
			titleList.append(ab.getArtist()+ "\n");
		return titleList.toString();
	}

	/**
	 * Goes through the list of songs in an album to get a particular song.
	 *
	 * @param albumTitle
	 * @return
	 * @throws NoAlbumFoundException
	 */
	public List<AudioElement> getAlbumSongs (String albumTitle) throws NoAlbumFoundException {
		Album theAlbum = null;
		ArrayList<AudioElement> songsInAlbum = new ArrayList<AudioElement>();
		for (Album al : albums) {
			if (al.getTitle().toLowerCase().equals(albumTitle.toLowerCase())) {
				theAlbum = al;
				break;
			}
		}
		if (theAlbum == null) throw new NoAlbumFoundException("No album with this title in the MusicHub!");

		List<UUID> songIDs = theAlbum.getSongs();
		for (UUID id : songIDs)
			for (AudioElement el : elements) {
				if (el instanceof Song) {
					if (el.getUUID().equals(id)) songsInAlbum.add(el);
				}
			}
		return songsInAlbum;		
		
	}

	/**
	 * Gets all the title of the songs.
	 *
	 * @param albumTitle
	 * @return
	 * @throws NoAlbumFoundException
	 */
	public String getAlbumSongs_Title (String albumTitle) throws NoAlbumFoundException {
		StringBuffer songsAlbum = new StringBuffer();
		Album theAlbum = null;
		ArrayList<Song> songsInAlbum = new ArrayList<Song>();
		for (Album al : albums) {
			if (al.getTitle().toLowerCase().equals(albumTitle.toLowerCase())) {
				theAlbum = al;
				break;
			}
		}
		if (theAlbum == null) throw new NoAlbumFoundException("No album with this title in the MusicHub!");

		List<UUID> songIDs = theAlbum.getSongs();
		for (UUID id : songIDs)
			for (AudioElement el : elements) {
				if (el instanceof Song) {
					if (el.getUUID().equals(id)) songsInAlbum.add((Song)el);
				}
			}

		for(Song song : songsInAlbum)
			songsAlbum.append(song.getTitle()+ "\n");
		return songsAlbum.toString();
	}

	/**
	 * Returns all songs of an album asorted by Genre.
	 *
	 * @param albumTitle
	 * @return
	 * @throws NoAlbumFoundException
	 */
	public List<Song> getAlbumSongsSortedByGenre (String albumTitle) throws NoAlbumFoundException {
		Album theAlbum = null;
		ArrayList<Song> songsInAlbum = new ArrayList<Song>();
		for (Album al : albums) {
			if (al.getTitle().toLowerCase().equals(albumTitle.toLowerCase())) {
				theAlbum = al;
				break;
			}
		}
		if (theAlbum == null) throw new NoAlbumFoundException("No album with this title in the MusicHub!");

		List<UUID> songIDs = theAlbum.getSongs();
		for (UUID id : songIDs)
			for (AudioElement el : elements) {
				if (el instanceof Song) {
					if (el.getUUID().equals(id)) songsInAlbum.add((Song)el);
				}
			}
		Collections.sort(songsInAlbum, new SortByGenre());
		return songsInAlbum;
	}

	/**
	 * Get the title of all songs in order by Genre.
	 *
	 * @param albumTitle
	 * @return
	 * @throws NoAlbumFoundException
	 */
	public String getAlbumSongsSortedByGenre_Title (String albumTitle) throws NoAlbumFoundException {
		StringBuffer songsAlbum = new StringBuffer();
		Album theAlbum = null;
		ArrayList<Song> songsInAlbum = new ArrayList<Song>();
		for (Album al : albums) {
			if (al.getTitle().toLowerCase().equals(albumTitle.toLowerCase())) {
				theAlbum = al;
				break;
			}
		}
		if (theAlbum == null) throw new NoAlbumFoundException("No album with this title in the MusicHub!");

		List<UUID> songIDs = theAlbum.getSongs();
		for (UUID id : songIDs)
			for (AudioElement el : elements) {
				if (el instanceof Song) {
					if (el.getUUID().equals(id)) songsInAlbum.add((Song)el);
				}
			}
		Collections.sort(songsInAlbum, new SortByGenre());

		for(Song song : songsInAlbum)
			songsAlbum.append(song.getTitle()+ "\n");
		return songsAlbum.toString();
	}

	/**
	 * Adds an element to an album.
	 *
	 * @param elementTitle  Title of the element.
	 * @param albumTitle  Album's title.
	 * @throws NoAlbumFoundException  Occurs when we could not find the album.
	 * @throws NoElementFoundException  Occurs when we could not find the elemnt.
	 */
	public void addElementToAlbum(String elementTitle, String albumTitle) throws NoAlbumFoundException, NoElementFoundException {
		Album theAlbum = null;
		int i = 0;
		boolean found = false; 
		for (i = 0; i < albums.size(); i++) {
			if (albums.get(i).getTitle().toLowerCase().equals(albumTitle.toLowerCase())) {
				theAlbum = albums.get(i);
				found = true;
				break;
			}
		}

		if (found == true) {
			AudioElement theElement = null;
			for (AudioElement ae : elements) {
				if (ae.getTitle().toLowerCase().equals(elementTitle.toLowerCase())) {
					theElement = ae;
					break;
				}
			}
            if (theElement != null) {
                theAlbum.addSong(theElement.getUUID());
                //replace the album in the list
                albums.set(i,theAlbum);
            }
            else throw new NoElementFoundException("Element " + elementTitle + " not found!");
		}
		else throw new NoAlbumFoundException("Album " + albumTitle + " not found!");
	}

	/**
	 * Adds an element to a playlist.
	 *
	 * @param elementTitle  Titlte of an element of the playlist.
	 * @param playListTitle  Title of the playlist.
	 * @throws NoPlayListFoundException  Occurs when we could not find the Playlist.
	 * @throws NoElementFoundException  Occurs when we could not find the element.
	 */
	public void addElementToPlayList(String elementTitle, String playListTitle) throws NoPlayListFoundException, NoElementFoundException {
		PlayList thePlaylist = null;
        int i = 0;
		boolean found = false; 
		
        for (i = 0; i < playlists.size(); i++) {
			if (playlists.get(i).getTitle().toLowerCase().equals(playListTitle.toLowerCase())) {
				thePlaylist = playlists.get(i);
				found = true;
				break;
			}
		}

		if (found == true) {
			AudioElement theElement = null;
			for (AudioElement ae : elements) {
				if (ae.getTitle().toLowerCase().equals(elementTitle.toLowerCase())) {
					theElement = ae;
					break;
				}
			}
            if (theElement != null) {
                thePlaylist.addElement(theElement.getUUID());
                //replace the album in the list
                playlists.set(i,thePlaylist);
            }
            else throw new NoElementFoundException("Element " + elementTitle + " not found!");
			
		} else throw new NoPlayListFoundException("Playlist " + playListTitle + " not found!");
	}

	/**
	 * Reads the albums in the XML file to retrieve them in a list.
	 * The purpose is to be able to display them later.
	 */
	private void loadAlbums () {
		NodeList albumNodes = xmlHandler.parseXMLFile(ALBUMS_FILE_PATH);
		if (albumNodes == null) return;
				
		for (int i = 0; i < albumNodes.getLength(); i++) {
			if (albumNodes.item(i).getNodeType() == Node.ELEMENT_NODE)   {
				Element albumElement = (Element) albumNodes.item(i);
				if (albumElement.getNodeName().equals("album")) 	{
					try {
						this.addAlbum(new Album (albumElement));
					} catch (Exception ex) {
						System.out.println ("Something is wrong with the XML album element");
					}
				}
			}  
		}
	}

	/**
	 * Reads the playlists in the XML file to retrieve them in a list.
	 * The purpose is to be able to display them later.
	 */
	private void loadPlaylists () {
		NodeList playlistNodes = xmlHandler.parseXMLFile(PLAYLISTS_FILE_PATH);
		if (playlistNodes == null) return;
		
		for (int i = 0; i < playlistNodes.getLength(); i++) {
			if (playlistNodes.item(i).getNodeType() == Node.ELEMENT_NODE)   {
				Element playlistElement = (Element) playlistNodes.item(i);
				if (playlistElement.getNodeName().equals("playlist")) 	{
					try {
						this.addPlaylist(new PlayList (playlistElement));
					} catch (Exception ex) {
						System.out.println ("Something is wrong with the XML playlist element");
					}
				}
			}  
		}
	}

	/**
	 * Reads the elements of the XML file to retrieve them in a list.
	 * The purpose is to be able to display them later.
	 */
	private void loadElements () {
		NodeList audioelementsNodes = xmlHandler.parseXMLFile(ELEMENTS_FILE_PATH);
		if (audioelementsNodes == null) return;
		
		for (int i = 0; i < audioelementsNodes.getLength(); i++) {
			if (audioelementsNodes.item(i).getNodeType() == Node.ELEMENT_NODE)   {
				Element audioElement = (Element) audioelementsNodes.item(i);
				if (audioElement.getNodeName().equals("song")) 	{
					try {
						AudioElement newSong = new Song (audioElement);
						this.addElement(newSong);
					} catch (Exception ex) 	{
						System.out.println ("Something is wrong with the XML song element");
					}
				}
				if (audioElement.getNodeName().equals("audiobook")) 	{
					try {
						AudioElement newAudioBook = new AudioBook (audioElement);
						this.addElement(newAudioBook);
					} catch (Exception ex) 	{
						System.out.println ("Something is wrong with the XML audiobook element");
					}
				}
			}  
		}
	}

	/**
	 * Save all albums in XML file.
	 */
	public void saveAlbums () {
		Document document = xmlHandler.createXMLDocument();
		if (document == null) return;
		
		// root element
		Element root = document.createElement("albums");
		document.appendChild(root);

		//save all albums
		for (Iterator<Album> albumsIter = this.albums(); albumsIter.hasNext();) {
			Album currentAlbum = albumsIter.next();
			currentAlbum.createXMLElement(document, root);
		}
		xmlHandler.createXMLFile(document, ALBUMS_FILE_PATH);
	}

	/**
	 * Saves all playlists in a XML file.
	 */
	public void savePlayLists () {
		Document document = xmlHandler.createXMLDocument();
		if (document == null) return;
		
		// root element
		Element root = document.createElement("playlists");
		document.appendChild(root);

		//save all playlists
		for (Iterator<PlayList> playlistsIter = this.playlists(); playlistsIter.hasNext();) {
			PlayList currentPlayList = playlistsIter.next();
			currentPlayList.createXMLElement(document, root);
		}
		xmlHandler.createXMLFile(document, PLAYLISTS_FILE_PATH);
	}

	/**
	 * Saves all elements in a XML file.
	 */
	public void saveElements() {
		Document document = xmlHandler.createXMLDocument();
		if (document == null) return;

		// root element
		Element root = document.createElement("elements");
		document.appendChild(root);

		//save all AudioElements
		Iterator<AudioElement> elementsIter = elements.listIterator(); 
		while (elementsIter.hasNext()) {
			
			AudioElement currentElement = elementsIter.next();
			if (currentElement instanceof Song)
			{
				((Song)currentElement).createXMLElement(document, root);
			}
			if (currentElement instanceof AudioBook)
			{ 
				((AudioBook)currentElement).createXMLElement(document, root);
			}
		}
		xmlHandler.createXMLFile(document, ELEMENTS_FILE_PATH);
 	}

}